--- a/HackNslashGame/HackNslashGame.vcxproj
+++ b/HackNslashGame/HackNslashGame.vcxproj
@@ -116,7 +116,7 @@
       <AdditionalIncludeDirectories>$(SolutionDir)HackNslashGame\external\sdl2\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
-      <SubSystem>Console</SubSystem>
+      <SubSystem>Windows</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
