--- a/HackNslashGame/HackNslashGame.vcxproj
+++ b/HackNslashGame/HackNslashGame.vcxproj
@@ -159,7 +159,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="src\Animation.cpp" />
+    <ClCompile Include="src\AnimationSet.cpp" />
+    <ClCompile Include="src\frame.cpp" />
     <ClCompile Include="src\globals.cpp" />
+    <ClCompile Include="src\groupBuilder.cpp" />
     <ClCompile Include="src\Log.cpp" />
     <ClCompile Include="src\res_path.cpp" />
     <ClCompile Include="src\randomNumber.cpp" />
@@ -169,7 +173,17 @@
     <ClCompile Include="src\TimeController.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\Animation.h" />
+    <ClInclude Include="src\AnimationSet.h" />
+    <ClInclude Include="src\frame.h" />
+    <ClInclude Include="src\dataGroupType.h" />
     <ClInclude Include="src\globals.h" />
+    <ClInclude Include="src\group.h" />
+    <ClInclude Include="src\groupBox.h" />
+    <ClInclude Include="src\groupBuilder.h" />
+    <ClInclude Include="src\groupNumber.h" />
+    <ClInclude Include="src\groupPosition.h" />
+    <ClInclude Include="src\groupString.h" />
     <ClInclude Include="src\Log.h" />
     <ClInclude Include="src\includes.h" />
     <ClInclude Include="src\res_path.h" />
