--- a/HackNslashGame/HackNslashGame.vcxproj.filters
+++ b/HackNslashGame/HackNslashGame.vcxproj.filters
@@ -51,6 +51,12 @@
     <ClCompile Include="src\AnimationSet.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\Entity.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\LivingEntity.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\cleanup.h">
@@ -105,6 +111,12 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\AnimationSet.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Entity.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\LivingEntity.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
